Bugfixes for scroll on smallscreens

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,7 @@
   margin: 0;
   padding: 0;
 }
-html, body {
-  overflow-x: hidden;
-}
 body {
   overflow-y: scroll !important;
+  margin: 0;
 }
